<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.assignment3.fragments.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >

        <action
            android:id="@+id/action_homeFragment_to_productDetailFragment"
            app:destination="@id/navigation_product_detail" />

    </fragment>

    <fragment
        android:id="@+id/navigation_shop"
        android:name="com.assignment3.fragments.shop.ShopFragment"
        android:label="@string/title_shop"
        tools:layout="@layout/fragment_shop" />

    <fragment
        android:id="@+id/navigation_favorites"
        android:name="com.assignment3.fragments.favorites.FavoritesFragment"
        android:label="@string/title_favorites"
        tools:layout="@layout/fragment_favorites" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.assignment3.fragments.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />


    <fragment
        android:id="@+id/navigation_product_detail"
        android:name="com.assignment3.fragments.productdetail.ProductDetailFragment"
        android:label="@string/title_detail"
        tools:layout="@layout/fragment_product_detail" />

</navigation>