<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="16dp"
    app:cardCornerRadius="8dp"
    app:cardElevation="1dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/shipping_container"
        android:padding="16dp">

        <!-- Home/Work Icon -->
        <ImageView
            android:id="@+id/img_address_type"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:padding="8dp"
            android:src="@drawable/ic_location"
            android:contentDescription="@string/txt_address_placeholder"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:background="@drawable/bg_button_radio_size"
            android:backgroundTint="#EFFDE7"
            app:tint="#76B600" />

        <!-- Name -->
        <TextView
            android:id="@+id/txt_recipient_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            android:text="@string/txt_name_placeholder"
            android:textColor="#000000"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@id/btn_edit"
            app:layout_constraintStart_toEndOf="@id/img_address_type"
            app:layout_constraintTop_toTopOf="@id/img_address_type" />

        <TextView
            android:id="@+id/txt_address_line"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="50dp"
            android:text="@string/txt_address_placeholder"
            android:textColor="#666666"
            android:textSize="13sp"
            app:layout_constraintEnd_toStartOf="@id/btn_edit"
            app:layout_constraintStart_toEndOf="@id/img_address_type"
            app:layout_constraintTop_toBottomOf="@id/txt_recipient_name" />

        <!-- Phone Number -->
        <TextView
            android:id="@+id/txt_phone"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            android:layout_marginTop="5dp"
            android:text="@string/txt_phone_placeholder"
            android:textColor="#666666"
            android:textSize="13sp"
            app:layout_constraintEnd_toStartOf="@id/btn_edit"
            app:layout_constraintStart_toEndOf="@id/img_address_type"
            app:layout_constraintTop_toBottomOf="@id/txt_address_line" />

        <!-- Edit Button -->
        <ImageButton
            android:id="@+id/btn_edit"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/btn_edit"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_edit"
            app:layout_constraintEnd_toStartOf="@id/btn_delete"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="#DAC505" />

        <!-- Delete Button -->
        <ImageButton
            android:id="@+id/btn_delete"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_weight="1"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:src="@drawable/ic_delete"
            android:scaleType="fitCenter"
            android:contentDescription="@string/btn_delete"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>