<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/container"
    tools:context=".fragments.guest.GuestProfileFragment">

    <!-- Top Navigation Bar -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/guest_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="?attr/actionBarSize"
        android:paddingHorizontal="16dp"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_guest_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_profile"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

            <!-- Profile Header Section -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:padding="16dp"
                tools:ignore="UselessParent">

                <!-- Profile Image -->
                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/img_profile"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    app:contentPadding="20dp"
                    android:src="@drawable/ic_user_off"
                    android:background="@drawable/bg_user_guest"/>

                <!-- User Name -->
                <TextView
                    android:id="@+id/txt_join_community"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/guest_join_community"
                    android:textColor="@android:color/black"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <!-- User Email -->
                <TextView
                    android:id="@+id/txt_join_community_sub"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="30dp"
                    android:gravity="center"
                    android:text="@string/guest_community_sub"
                    android:textColor="#757575"
                    android:textSize="14sp" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_login"
                    style="@style/Widget.MaterialComponents.Button"
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:layout_marginBottom="4dp"
                    android:text="@string/btn_login"
                    android:textColor="#FFFFFF"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    app:backgroundTint="@color/red_main"
                    app:cornerRadius="12dp" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_register"
                    style="@style/Widget.MaterialComponents.Button"
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:text="@string/btn_register"
                    android:textColor="#FFFFFF"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    app:backgroundTint="@color/black"
                    app:cornerRadius="12dp" />

            </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>